--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
 </head>
 <body>
     <div class="container">
-        <header>
-            <h1>🤖 AI Text Processor</h1>
-            <p>Experience the power of AI with text summarization, metadata extraction, and creative rewriting</p>
-        </header>
+       <header>
+    <div class="language-switcher">
+        <a href="/" class="lang-btn active">🇺🇸 English</a>
+        <a href="/de/" class="lang-btn">🇩🇪 Deutsch</a>
+    </div>
+    <h1>🤖 AI Text Processor</h1>
+    <p>Experience the power of AI with text summarization, metadata extraction, and creative rewriting</p>
+</header>
 
         <div class="main-content">
             <div class="input-section">
