--- a/de/index.html
+++ b/de/index.html
@@ -8,10 +8,14 @@
 </head>
 <body>
     <div class="container">
-        <header>
-            <h1>🤖 KI-Textverarbeitung</h1>
-            <p>Erleben Sie die Kraft der KI mit Textzusammenfassung, Metadaten-Extraktion und kreativem Umschreiben</p>
-        </header>
+     <header>
+    <div class="language-switcher">
+        <a href="/" class="lang-btn">🇺🇸 English</a>
+        <a href="/de/" class="lang-btn active">🇩🇪 Deutsch</a>
+    </div>
+    <h1>🤖 KI-Textverarbeitung</h1>
+    <p>Erleben Sie die Kraft der KI mit Textzusammenfassung, Metadaten-Extraktion und kreativem Umschreiben</p>
+</header>
 
         <div class="main-content">
             <div class="input-section">
